--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-    font-family: 'Poppins', sans-serif;
+* {
+  font-family: "Poppins", sans-serif;
+}
+
+@media (max-width: 767px) {
+  .sideMenu {
+    display: none;
+    position: absolute;
+    padding: 20px;
+    right: -15px;
+    width: 18rem;
+    height: 100vh;
+    top: -3px;
+  }
+  @keyframes mymove {
+    from {right: -50px;}
+    to {right: -10px;}
+  }
 }
