dealt with hover itches and added a few svgs fow sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+.sideContent:hover a img {
+  background-color: rgba(128, 0, 128, 0.5);
+  transition: 0.5s ease-in;
+}
 @media (max-width: 767px) {
   .sideMenu {
     display: none;
